# den-trailer-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  server.js
.github/workflows/: docker-publish.yml
src/: addon.rs  config.rs  configure.html  crop.rs  httputil.rs  main.rs  play.rs  state.rs  tests.rs  upstream.rs  ytdlp.rs
test/: meta.test.js
