[package]
name = "den-reel"
version = "0.2.0"
edition = "2021"
description = "Den trailers, one container: addon (imdb→ytId via TMDB) + yt-dlp/ffmpeg proxy (ytId→faststart MP4) for inline tvOS playback"
publish = false

[[bin]]
name = "den-reel"
path = "src/main.rs"

[dependencies]
# Single-threaded async runtime — this is an I/O-bound proxy; the CPU work lives in the
# yt-dlp/ffmpeg subprocesses, not here. current_thread keeps the resident thread count (and RAM)
# minimal on a homelab box.
tokio = { version = "1", features = ["rt", "macros", "net", "process", "fs", "io-util", "time", "sync"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls (not OpenSSL) with bundled webpki roots → no ca-certificates package needed at runtime,
# and a static-friendly TLS stack for a slim image.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-util = { version = "0.7", features = ["io"] }
# Only need Shared/FutureExt/TryStreamExt — skip the sink/io/compat machinery in the defaults.
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "process", "fs", "io-util", "time", "sync", "signal", "test-util"] }

# Self-contained binary for a resource-constrained homelab. opt-level 3 (speed) — the size delta
# over "z" is <1 MB but the serve/stream path wants the fast codegen (time-to-first-frame). Fat
# LTO + one codegen unit + strip keep it small anyway; abort on panic drops unwind tables.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
